// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Income Phase State will award income from established structures 1`] = `
{
  "chargePower": 4,
  "credits": 11,
  "knowledge": 3,
  "ore": 4,
  "powerNodes": 1,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 0, Science 0 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 0, Science 2 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": 2,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 0, Science 4 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": 4,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 0, Science 5 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 1, Science 0 1`] = `
{
  "chargePower": 1,
  "credits": 2,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 2, Science 3 1`] = `
{
  "chargePower": 2,
  "credits": 2,
  "knowledge": 3,
  "ore": 1,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 3, Science 0 1`] = `
{
  "chargePower": 3,
  "credits": 3,
  "knowledge": undefined,
  "ore": 1,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 4, Science 2 1`] = `
{
  "chargePower": 4,
  "credits": 4,
  "knowledge": 2,
  "ore": 2,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from research progress: Economics 5, Science 0 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from round boosters: dual income 1`] = `
{
  "chargePower": undefined,
  "credits": 4,
  "knowledge": 2,
  "ore": 7,
  "powerNodes": 2,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from round boosters: no income 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": undefined,
  "qic": undefined,
}
`;

exports[`Income Phase State will award income from round boosters: single income 1`] = `
{
  "chargePower": undefined,
  "credits": undefined,
  "knowledge": undefined,
  "ore": undefined,
  "powerNodes": 2,
  "qic": 1,
}
`;
